# todolist

./: pyproject.toml
articles/: models.py  serializers.py  urls.py  views.py
articles/migrations/: 0001_initial.py  0002_alter_article_image.py  0003_rename_user_id_article_user.py  0004_alter_article_completion_at.py
todolist/: settings.py  urls.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
